Fix welcome size text on small screen.

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -87,6 +87,7 @@ nav {
 	.welcome-text {
 		color: $color-white;
 		font-family: $font-secondary;
+		font-size: 25px;
 		font-weight:bold;
 		opacity: 0;
 
